--- a/01-Introduccion/index.html
+++ b/01-Introduccion/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Introducción</title>
     <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -14,5 +14,8 @@
         <p>Introducción</p>
         <p class="hashtag">#JSModernoConJuan</p>
     </div>
+
+    <!-- <script>alert("Alerta desde JS")</script> -->
+    <script src="./js/app.js"></script>
 </body>
 </html>
